--- a/bytecodes/data/ev3.yml
+++ b/bytecodes/data/ev3.yml
@@ -1,6 +1,289 @@
 %YAML 1.1
 ---
 
+defines:
+  OUTPUTS:
+    value: 4
+    desc: Number of output ports in the system
+  INPUTS:
+    value: 4
+    desc: Number of input  ports in the system
+  BUTTONS:
+    value: 6
+    desc: Number of buttons in the system
+  LEDS:
+    value: 4
+    desc: Number of LEDs in the system
+
+  LCD_WIDTH:
+    value: 178
+    desc: LCD horizontal pixels
+  LCD_HEIGHT:
+    value: 128
+    desc: LCD vertical pixels
+  TOPLINE_HEIGHT:
+    value: 10
+    desc: Top line vertical pixels
+  LCD_STORE_LEVELS:
+    value: 3
+    desc: Store levels
+
+  DEFAULT_VOLUME:
+    value: 100
+  DEFAULT_SLEEPMINUTES:
+    value: 30
+
+  # SOFTWARE
+
+  FG_COLOR:
+    value: 1
+    desc:  Forground color
+  BG_COLOR:
+    value: 0
+    desc:  Background color
+
+  CHAIN_DEPT:
+    value: 4
+    desc: Number of bricks in the USB daisy chain (master + slaves)
+
+  PATHSIZE:
+    value: 84
+    desc: Max path size excluding trailing forward slash including zero termination
+  NAMESIZE:
+    value: 32
+    desc: Max name size including zero termination (must be divideable by 4)
+  EXTSIZE:
+    value: 5
+    desc: Max extension size including dot and zero termination
+  FILENAMESIZE:
+    value: 120
+    desc: Max filename size including path, name, extension and termination (must be divideable by 4)
+  MACSIZE:
+    value: 18
+    desc: Max WIFI MAC size including zero termination
+  IPSIZE:
+    value: 16
+    desc: Max WIFI IP size including zero termination
+  BTADRSIZE:
+    value: 13
+    desc: Max bluetooth address size including zero termination
+
+  ERR_STRING_SIZE:
+    value: 32
+    desc: Inclusive zero termination
+
+  EVENT_NONE:
+    value: 0
+  EVENT_BT_PIN:
+    value: 1
+  EVENT_BT_REQ_CONF:
+    value: 2
+
+  MAX_VALID_TYPE:
+    value: 101
+    desc: Highest valid device type
+
+  # FOLDERS
+
+  MEMORY_FOLDER:
+    value: "'/mnt/ramdisk'"
+    desc: Folder for non volatile user programs/data
+  PROGRAM_FOLDER:
+    value: "'../prjs/BrkProg_SAVE'"
+    desc: Folder for On Brick Programming programs
+  DATALOG_FOLDER:
+    value: "'../prjs/BrkDL_SAVE'"
+    desc: Folder for On Brick Data log files
+  SDCARD_FOLDER:
+    value: "'../prjs/SD_Card'"
+    desc: Folder for SD card mount
+  USBSTICK_FOLDER:
+    value: "'../prjs/USB_Stick'"
+    desc: Folder for USB stick mount
+
+  PRJS_DIR:
+    value: "'../prjs'"
+    desc: Project folder
+  APPS_DIR:
+    value: "'../apps'"
+    desc: Apps folder
+  TOOLS_DIR:
+    value: "'../tools'"
+    desc: Tools folder
+  TMP_DIR:
+    value: "'../tmp'"
+    desc: Temporary folder
+
+  SETTINGS_DIR:
+    value: "'../sys/settings'"
+    desc: Folder for non volatile settings
+
+  DIR_DEEPT:
+    value: 127
+    desc: Max directory items allocated including "." and ".."
+
+  # FILES USED IN APPLICATION
+
+  LASTRUN_FILE_NAME:
+    value: "'lastrun'"
+    desc: Last run filename
+  CALDATA_FILE_NAME:
+    value: "'caldata'"
+    desc: Calibration data filename
+
+  # FILES USED IN APPS
+
+  SLEEP_FILE_NAME:
+    value: "'Sleep'"
+    desc: File used in "Sleep" app to save status
+  VOLUME_FILE_NAME:
+    value: "'Volume'"
+    desc: File used in "Volume" app to save status
+  WIFI_FILE_NAME:
+    value: "'WiFi'"
+    desc: File used in "WiFi" app to save status
+  BLUETOOTH_FILE_NAME:
+    value: "'Bluetooth'"
+    desc: File used in "Bluetooth" app to save status
+
+  # EXTENSIONS
+
+  EXT_SOUND:
+    value: "'.rsf'"
+    desc: Robot Sound File
+  EXT_GRAPHICS:
+    value: "'.rgf'"
+    desc: Robot Graphics File
+  EXT_BYTECODE:
+    value: "'.rbf'"
+    desc: Robot Byte code File
+  EXT_TEXT:
+    value: "'.rtf'"
+    desc: Robot Text File
+  EXT_DATALOG:
+    value: "'.rdf'"
+    desc: Robot Datalog File
+  EXT_PROGRAM:
+    value: "'.rpf'"
+    desc: Robot Program File
+  EXT_CONFIG:
+    value: "'.rcf'"
+    desc: Robot Configuration File
+  EXT_ARCHIVE:
+    value: "'.raf'"
+    desc: Robot Archive File
+
+  # NAME LENGTHs
+
+  BRICKNAMESIZE:
+    value: 120
+    desc: Brick name maximal size (including zero termination)
+  BTPASSKEYSIZE:
+    value: 7
+    desc: Bluetooth pass key size (including zero termination)
+  WIFIPASSKEYSIZE:
+    value: 33
+    desc: WiFi pass key size (including zero termination)
+
+  # VALID CHARACTERS
+
+  CHARSET_NAME:
+    value: 0x01
+    desc: Character set allowed in brick name and raw filenames
+  CHARSET_FILENAME:
+    value: 0x02
+    desc: Character set allowed in file names
+  CHARSET_BTPASSKEY:
+    value: 0x04
+    desc: Character set allowed in bluetooth pass key
+  CHARSET_WIFIPASSKEY:
+    value: 0x08
+    desc: Character set allowed in WiFi pass key
+  CHARSET_WIFISSID:
+    value: 0x10
+    desc: Character set allowed in WiFi ssid
+
+  # NUMBER LIMITS
+
+  DATA8_MIN:
+    value: -127
+    desc: DATA8  negative limit
+  DATA8_MAX:
+    value: 127
+    desc: DATA8  positive limit
+  DATA16_MIN:
+    value: -32767
+    desc: DATA16 negative limit
+  DATA16_MAX:
+    value: 32767
+    desc: DATA16 positive limit
+  DATA32_MIN:
+    value: -2147483647
+    desc: DATA32 negative limit
+  DATA32_MAX:
+    value: 2147483647
+    desc: DATA32 positive limit
+  DATAF_MIN:
+    value: -2147483647
+    desc: DATAF  negative limit
+  DATAF_MAX:
+    value: 2147483647
+    desc: DATAF  positive limit
+
+  DATA8_NAN:
+    value: 0x80
+  DATA16_NAN:
+    value: 0x8000
+  DATA32_NAN:
+    value: 0x80000000
+  DATAF_NAN:
+    value: 0x7FC00000
+
+  #
+
+  PULSE_GUI_BACKGROUND:
+    value: 0x01
+  PULSE_BROWSER:
+    value: 0x02
+  PULSE_KEY:
+    value: 0x04
+
+  # GRAPHICS
+
+  POP3_ABS_X:
+    value: 16
+  POP3_ABS_Y:
+    value: 50
+
+  POP3_ABS_WARN_ICON_X:
+    value: 64
+  POP3_ABS_WARN_ICON_X1:
+    value: 40
+  POP3_ABS_WARN_ICON_X2:
+    value: 72
+  POP3_ABS_WARN_ICON_X3:
+    value: 104
+  POP3_ABS_WARN_ICON_Y:
+    value: 60
+  POP3_ABS_WARN_SPEC_ICON_X:
+    value: 88
+  POP3_ABS_WARN_SPEC_ICON_Y:
+    value: 60
+  POP3_ABS_WARN_TEXT_X:
+    value: 80
+  POP3_ABS_WARN_TEXT_Y:
+    value: 68
+  POP3_ABS_WARN_YES_X:
+    value: 72
+  POP3_ABS_WARN_YES_Y:
+    value: 90
+  POP3_ABS_WARN_LINE_X:
+    value: 21
+  POP3_ABS_WARN_LINE_Y:
+    value: 89
+  POP3_ABS_WARN_LINE_ENDX:
+    value: 155
+
 enums:
   TYPE: &TYPE
     desc: Type values for byte codes
